<resources>
    <string name="app_name">TravelPal</string>
    <string name="welcome_to_travelpal">Welcome to TravelPal!</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="enter_name">Name</string>
    <string name="enter_email">Email ID</string>
    <string name="enter_password">Password</string>
    <string name="select_your_interests">Select your interests</string>
    <string name="save">Save</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="event_price">Price</string>
    <string name="event_location">Location</string>
    <string name="add">Add</string>
    <string name="event_register_link">Register Link</string>
    <string name="create_event">Create Event</string>
    <string name="event_description">Description</string>
    <string name="selected_image">Selected Image</string>
    <string name="select_image">Select Image</string>
    <string name="art">Art</string>
    <string name="nature">Nature</string>
    <string name="photography">Photography</string>
    <string name="travel">Travel</string>
    <string name="music">Music</string>
    <string name="movies">Movies</string>
    <string name="food">Food</string>
    <string name="sports">Sports</string>
    <string name="right_now">Right Now</string>
    <string name="explore">Explore</string>
    <string name="register_event">Register Event</string>
    <string name="item_image">Image</string>
    <string name="trip_budget">Trip Budget</string>
    <string name="enter_your_budget">Enter your budget</string>
    <string name="traveling_as">Traveling As</string>
    <string name="solo">Solo</string>
    <string name="group_of_2">Group of 2</string>
    <string name="group_of_3">Group of 3</string>
    <string name="budget_includes">Budget Includes</string>
    <string name="meals">Meals</string>
    <string name="submit">Submit</string>
    <string name="minimumBudget">$0</string>
    <string name="maximumBudget">$5000</string>
    <string name="plan_a_trip">Plan a travel</string>
    <string name="planned_trips">Planned Trips</string>
    <string name="destination">Destination</string>
    <string name="duration">Duration</string>
    <string name="meals_included">Meals Included</string>
    <string name="register">Register</string>
    <string name="search">Search</string>
    <string name="show_location">Show Location</string>
    <string name="confirm_selection">Confirm Selection</string>
    <string name="user_profile">User Profile</string>
    <string name="total_budget">Total Budget</string>
    <string name="per_person_budget">Per person budget</string>
    <string name="budget_amount">Amount</string>
    <string name="title_home">Home</string>
    <string name="title_budget">Budget</string>
    <string name="title_profile">Profile</string>
    <string name="place_recommendation">Place Recommendation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="occasion">Occasion</string>
    <string name="location">Location</string>
    <string name="budget">Budget</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="weather">Weather</string>
    <string name="enter_location">Enter Location</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="get_weather">Get Weather</string>
    <string name="enter_date_yyyy_mm_dd">Enter date (yyyy-MM-dd)</string>
</resources>